--- a/index.html
+++ b/index.html
@@ -13,14 +13,13 @@
         font-family: sans-serif;
         text-align: center;
 
-        /* خلفية اللوجو – نمط مكرر */
+        /* خلفية اللوجو المتكررة */
         background-image: url('logo.png');
         background-repeat: repeat;
-        background-size: 180px;
-        opacity: 1;
+        background-size: 170px;
     }
 
-    /* طبقة لتخفيف الخلفية (بدون التأثير على النصوص) */
+    /* طبقة تخفيف حتى لا تتداخل الخلفية */
     body::before {
         content: "";
         position: fixed;
@@ -28,12 +27,11 @@
         left: 0;
         width: 100%;
         height: 100%;
-        background-color: rgba(209, 204, 187, 0.92); /* نفس اللون ولكن بشفافية */
-        backdrop-filter: blur(1px);
+        background-color: rgba(209, 204, 187, 0.92);
         z-index: -1;
     }
 
-    /* اللوجو واضح في الأعلى */
+    /* اللوجو */
     .logo {
         width: 180px;
         height: auto;
@@ -44,7 +42,7 @@
         z-index: 2;
     }
 
-    /* الرسالة الترحيبية */
+    /* النص الترحيبي */
     .welcome-text {
         font-size: 21px;
         color: #494424;
@@ -61,20 +59,19 @@
         margin-top: 15px;
         display: flex;
         flex-direction: column;
-        gap: 28px;
+        gap: 30px;
         align-items: center;
         position: relative;
         z-index: 2;
     }
 
-    .icons a img {
+    .icon {
         width: 65px;
         height: 65px;
-        filter: brightness(0) saturate(100%) invert(29%) sepia(22%) saturate(350%) hue-rotate(25deg) brightness(80%);
-        opacity: 1;
+        fill: #494424;
     }
 
-    /* خريطة جوجل */
+    /* خريطة */
     .map-container {
         width: 90%;
         margin: 40px auto;
@@ -109,37 +106,75 @@
 <!-- اللوجو -->
 <img src="logo.png" class="logo" alt="Yashim Spa Logo">
 
-<!-- الرسالة الترحيبية -->
+<!-- النص الترحيبي -->
 <div class="welcome-text">
-    أهلاً وسهلاً بكم في مركز يشم سبا… وجهتكم الفاخرة للاسترخاء والعناية بالجسم.  
+    أهلاً وسهلاً بكم في مركز يشم سبا… وجهتكم الفاخرة للاسترخاء والعناية بالجسم.
     يسعدنا استقبالكم وتقديم أفضل خدمات الراحة والعافية في أجواء مليئة بالرفاهية والهدوء.
 </div>
 
-<!-- الإيقونات -->
+<!-- الإيقونات SVG -->
 <div class="icons">
 
+    <!-- Instagram -->
     <a href="https://www.instagram.com/yashim.spa" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/1384/1384063.png">
+        <svg class="icon" viewBox="0 0 24 24">
+            <path d="M7 2C4.24 2 2 4.24 2 7v10c0 2.76 2.24 5 5 5h10c2.76 
+            0 5-2.24 5-5V7c0-2.76-2.24-5-5-5H7zm10 2c1.65 0 3 1.35 3 
+            3v10c0 1.65-1.35 3-3 3H7c-1.65 0-3-1.35-3-3V7c0-1.65 
+            1.35-3 3-3h10zm-5 3c-2.76 0-5 2.24-5 
+            5s2.24 5 5 5 5-2.24 5-5-2.24-5-5-5zm0 
+            2c1.65 0 3 1.35 3 3s-1.35 3-3 
+            3-3-1.35-3-3 1.35-3 3-3zm4.5-.25c-.41 
+            0-.75.34-.75.75s.34.75.75.75.75-.34.75-.75-.34-.75-.75-.75z"/>
+        </svg>
     </a>
 
+    <!-- Snapchat -->
     <a href="https://snapchat.com/t/R6g5tyFL" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/3670/3670147.png">
+        <svg class="icon" viewBox="0 0 24 24">
+            <path d="M12 2c2.8 0 5 2.2 5 5v1.4c0 .8.6 1.6 1.4 1.8.9.2 
+            1.6.9 1.6 1.8s-.7 1.6-1.6 1.8c-.8.2-1.4 1-1.4 
+            1.8V17c0 2.8-2.2 5-5 5h-1c-2.8 0-5-2.2-5-5v-1.4c0-.8-.6-1.6-1.4-1.8-.9-.2-1.6-.9-1.6-1.8s.7-1.6 
+            1.6-1.8c.8-.2 1.4-1 1.4-1.8V7c0-2.8 2.2-5 5-5h1z"/>
+        </svg>
     </a>
 
+    <!-- TikTok -->
     <a href="https://www.tiktok.com/@yashim.spa" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/3046/3046121.png">
+        <svg class="icon" viewBox="0 0 24 24">
+            <path d="M13 2h3c.2 1.4.7 2.5 1.6 3.4.8.8 1.7 1.3 
+            2.6 1.5V10c-1-.1-2-.4-3-.8-1-.4-1.8-.9-2.5-1.6v8.7c0 
+            2-.7 3.6-2 4.7-1.3 1.1-2.8 1.7-4.7 1.7-1.9 0-3.4-.6-4.6-1.9C2.7 
+            19.7 2 18.1 2 16.2c0-1.9.7-3.5 1.9-4.8C5.1 10.1 6.6 
+            9.5 8.5 9.5c.6 0 1.2.1 1.8.3V13c-.6-.2-1.2-.3-1.8-.3-1 0-1.7.3-2.3 
+            1-.6.6-.9 1.4-.9 2.5s.3 1.9.9 2.5c.6.6 1.3 1 2.3 
+            1 1 0 1.7-.3 2.3-1 .6-.6.9-1.4.9-2.5V2z"/>
+        </svg>
     </a>
 
+    <!-- WhatsApp -->
     <a href="https://wa.me/966558666115" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png">
+        <svg class="icon" viewBox="0 0 24 24">
+            <path d="M12 2a10 10 0 0 0-8.7 14.9L2 22l5.3-1.3A10 
+            10 0 1 0 12 2zm0 18c-1.7 0-3.3-.5-4.7-1.5l-.3-.2-3 
+            .7.8-2.9-.2-.3A8 8 0 1 1 12 20zm4.1-5.4c-.2-.1-1.3-.6-1.5-.7-.2-.1-.4-.1-.6.1-.2.2-.7.7-.9.8-.2.1-.3.2-.5 
+            0-.2-.1-.9-.3-1.7-.9-.6-.4-1.1-1.2-1.3-1.4-.1-.2 
+            0-.3.1-.4.1-.1.2-.3.3-.4.1-.1.1-.2.2-.3.1-.1.1-.2 
+            0-.3-.1-.1-.6-1.5-.8-2.1-.2-.6-.5-.5-.7-.5h-.6c-.2 
+            0-.3.1-.4.2-.1.2-.5.5-.5 1.3s.5 1.5.6 1.6c.1.1.9 
+            1.5 2.2 2.5 1.3 1.1 2.4 1.5 2.7 1.6.3.1.6.1.8 
+            0 .2-.1 1.3-.5 1.5-.9.2-.4.2-.7.1-.8-.2-.1-.4-.1-.6-.2z"/>
+        </svg>
     </a>
 
-    <a href="tel:0558666115">
-        <img src="https://cdn-icons-png.flaticon.com/512/724/724664.png">
-    </a>
-
+    <!-- Location -->
     <a href="https://maps.app.goo.gl/56KDGug2hh4ZfEcH6?g_st=ipc" target="_blank">
-        <img src="https://cdn-icons-png.flaticon.com/512/535/535239.png">
+        <svg class="icon" viewBox="0 0 24 24">
+            <path d="M12 2C8.1 2 5 5.1 5 9c0 5.2 7 
+            13 7 13s7-7.8 7-13c0-3.9-3.1-7-7-7zm0 
+            9.5c-1.4 0-2.5-1.1-2.5-2.5S10.6 6.5 12 
+            6.5s2.5 1.1 2.5 2.5S13.4 11.5 12 11.5z"/>
+        </svg>
     </a>
 
 </div>
