--- a/index.html
+++ b/index.html
@@ -133,11 +133,10 @@
     </a>
 
     <!-- Snapchat (Outline FIXED) -->
-    <a href="https://snapchat.com/t/R6g5tyFL" target="_blank">
-        <svg class="icon" viewBox="0 0 24 24" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round">
-            <path d="M12 3c2.5 0 4.5 2 4.5 4.5v1.2c0 .7.5 1.4 1.2 1.6.9.3 1.6.9 1.6 1.8s-.7 1.5-1.6 1.8c-.7.2-1.2.9-1.2 1.6v1c0 2.5-2 4.5-4.5 4.5h-.8c-2.5 0-4.5-2-4.5-4.5v-1c0-.7-.5-1.4-1.2-1.6-.9-.3-1.6-.9-1.6-1.8s.7-1.5 1.6-1.8c.7-.2 1.2-.9 1.2-1.6V7.5C6.7 5 8.7 3 11.2 3h.8z"/>
-        </svg>
-    </a>
+    <div class="icon-item">
+<a href="https://snapchat.com/t/R6g5tyFL" target="_blank">
+<img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/snapchat.svg">
+</a></div>
 
     <!-- TikTok (Outline) -->
     <a href="https://www.tiktok.com/@yashim.spa" target="_blank">
